# ai-goofish-monitor

./: README.md  pyproject.toml  start.py
src/: scraper.py
src/domain/repositories/: task_repository.py
web-ui/: package.json  pnpm-lock.yaml
